add table for some pages

--- a/web/index.html
+++ b/web/index.html
@@ -1334,7 +1334,7 @@
                             078-7991075
                         </td>
                         <td>
-                            Not Released
+                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
                         </td>
                         <td>
                             <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
@@ -1364,7 +1364,7 @@
                             078-7991075
                         </td>
                         <td>
-                            Not Released
+                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
                         </td>
                         <td>
                             <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
@@ -1394,7 +1394,7 @@
                             078-7991075
                         </td>
                         <td>
-                            Not Released
+                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
                         </td>
                         <td>
                             <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
@@ -1823,8 +1823,7 @@
                         <th>Duration</th>
                         <th>Driver Want Or Not</th>
                         <th>Request Accept Or Deny</th>
-                        <th>Update</th>
-                        <th>Delete</th>
+                        <th>View</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -1863,19 +1862,14 @@
                             12
                         </td>
                         <td>
-                            Want
+                            <span class="badge badge-success rounded-pill d-inline">Want</span>
                         </td>
                         <td>
-                            Accept
+                            <span class="badge badge-success rounded-pill d-inline">Accept</span>
                         </td>
                         <td>
-                            <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-pen-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-times"></i>
+                            <button type="button" class="btn btn-info btn-sm px-3" data-ripple-color="dark">
+                                <i class="fas fa-eye"></i>
                             </button>
                         </td>
                     </tr>
@@ -1914,19 +1908,14 @@
                             12
                         </td>
                         <td>
-                            Not Want
+                            <span class="badge badge-success rounded-pill d-inline">Want</span>
                         </td>
                         <td>
-                            Accept
+                            <span class="badge badge-success rounded-pill d-inline">Accept</span>
                         </td>
                         <td>
-                            <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-pen-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-times"></i>
+                            <button type="button" class="btn btn-info btn-sm px-3" data-ripple-color="dark">
+                                <i class="fas fa-eye"></i>
                             </button>
                         </td>
                     </tr>
@@ -1965,19 +1954,14 @@
                             12
                         </td>
                         <td>
-                            Not Want
+                            <span class="badge badge-success rounded-pill d-inline">Want</span>
                         </td>
                         <td>
-                            Deny
+                            <span class="badge badge-success rounded-pill d-inline">Accept</span>
                         </td>
                         <td>
-                            <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-pen-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-times"></i>
+                            <button type="button" class="btn btn-info btn-sm px-3" data-ripple-color="dark">
+                                <i class="fas fa-eye"></i>
                             </button>
                         </td>
                     </tr>
@@ -2232,33 +2216,32 @@
                 <table class="table align-middle mb-0 bg-white table-responsive">
                     <thead class="bg-light">
                     <tr>
-                        <th>Reserve Date</th>
+                        <th>Schedule Id</th>
                         <th>Reserve Id</th>
-                        <th>Customer</th>
+                        <th>Car Id</th>
+                        <th>Driver Id</th>
                         <th>Pickup Date</th>
                         <th>Pickup Time</th>
                         <th>Pickup Venue</th>
                         <th>Return Date</th>
                         <th>Return Time</th>
                         <th>Return Venue</th>
-                        <th>Destination</th>
-                        <th>Duration</th>
-                        <th>Driver Want Or Not</th>
-                        <th>Request Accept Or Deny</th>
-                        <th>Update</th>
-                        <th>Delete</th>
+                        <th>Release Or Not</th>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                         <td>
-                            2022-12-21
+                            S00-0001
                         </td>
                         <td>
                             R00-0001
                         </td>
                         <td>
-                            Cus00-0001
+                            C00-0001
+                        </td>
+                        <td>
+                            D00-0001
                         </td>
                         <td>
                             2022-12-21
@@ -2279,37 +2262,21 @@
                             Galle
                         </td>
                         <td>
-                            Anuradapura
-                        </td>
-                        <td>
-                            12
-                        </td>
-                        <td>
-                            Want
-                        </td>
-                        <td>
-                            Accept
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-pen-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-times"></i>
-                            </button>
+                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            2022-12-21
+                            S00-0001
                         </td>
                         <td>
                             R00-0001
                         </td>
                         <td>
-                            Cus00-0001
+                            C00-0001
+                        </td>
+                        <td>
+                            D00-0001
                         </td>
                         <td>
                             2022-12-21
@@ -2330,37 +2297,21 @@
                             Galle
                         </td>
                         <td>
-                            Anuradapura
-                        </td>
-                        <td>
-                            12
-                        </td>
-                        <td>
-                            Not Want
-                        </td>
-                        <td>
-                            Accept
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-pen-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-times"></i>
-                            </button>
+                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
                         </td>
                     </tr>
                     <tr>
                         <td>
-                            2022-12-21
+                            S00-0001
                         </td>
                         <td>
                             R00-0001
                         </td>
                         <td>
-                            Cus00-0001
+                            C00-0001
+                        </td>
+                        <td>
+                            D00-0001
                         </td>
                         <td>
                             2022-12-21
@@ -2381,26 +2332,7 @@
                             Galle
                         </td>
                         <td>
-                            Anuradapura
-                        </td>
-                        <td>
-                            12
-                        </td>
-                        <td>
-                            Not Want
-                        </td>
-                        <td>
-                            Deny
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-warning btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-pen-alt"></i>
-                            </button>
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-danger btn-sm px-3" data-ripple-color="dark">
-                                <i class="fas fa-times"></i>
-                            </button>
+                            <span class="badge badge-success rounded-pill d-inline">Not Released</span>
                         </td>
                     </tr>
                     </tbody>
@@ -2437,12 +2369,10 @@
                 <table class="table align-middle mb-0 bg-white table-responsive">
                     <thead class="bg-light">
                     <tr>
-                        <th>Reserve Date</th>
-                        <th>Reserve Id</th>
-                        <th>Customer</th>
-                        <th>Pickup Date</th>
-                        <th>Pickup Time</th>
-                        <th>Pickup Venue</th>
+                        <th>Payment Id</th>
+                        <th>Payment Date</th>
+                        <th>Rent Fee</th>
+                        <th>Driver Fee</th>
                         <th>Return Date</th>
                         <th>Return Time</th>
                         <th>Return Venue</th>
