--- a/web/index.html
+++ b/web/index.html
@@ -2432,11 +2432,10 @@
             <div class="w-75 h-25" style="position: absolute;top: 0;bottom: 0;left: 0;right: 0;margin: auto;">
                 <figure class="text-center mt-5 text-white">
                     <blockquote class="blockquote" style="border: 1px solid transparent">
-                        <p class="display-1" style="font-family: emoji">RENT CAR</p>
+                        <p style="font-family: emoji; font-size: 60px">RENT CAR</p>
                     </blockquote>
                     <figcaption class="blockquote-footer text-white" style="font-size: 25px">
-                        Lorem ipsum dolor sit amet.
-                    </figcaption>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit.</figcaption>
                 </figure>
             </div>
             <div class="h-25 w-75 text-center" style="position: absolute;top: 75%;bottom: 0;left: 0;right: 0;margin: auto">
@@ -2447,26 +2446,69 @@
         <div class="w-100 h-100" style="background-color: whitesmoke">
 
             <div class="container">
+
                 <div class="row w-100 h-25 text-center mt-2">
                     <figure class="text-center mt-5 text-black">
                         <blockquote class="blockquote" style="border: 1px solid transparent">
                             <p class="display-1" style="font-family: emoji">OUR RENTAL CARS</p>
                         </blockquote>
-                        <figcaption class=" text-black" style="font-size: 25px">
+                        <figcaption class=" text-black mt-0" style="font-size: 20px">
                             Choose any of our featured cars
                         </figcaption>
                     </figure>
                 </div>
 
-                <div class="row bg-warning w-100 h-75">
-                    <div class="col-md">
-                        One of three columns
+                <div class="row w-100 h-75 text-center ">
+                    <div class="col-4  ">
+                        <div class="w-75 h-75 bg-white rounded-pill rounded-3 shadow-5-strong center-block mt-5">
+                            <p class="text-cente" style="position: relative;top: 35%;bottom: 0;right: 0;left:0; margin: auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                                Aliquam aperiam consequatur dignissimos doloremque dolorum ducimus enim et hic inventore libero nemo nobis possimus,
+                                provident quaerat repellat sequi sit unde veniam.</p>
+                        </div>
                     </div>
-                    <div class="col-md">
-                        One of three columns
-                    </div>
-                    <div class="col-md">
-                        One of three columns
+
+                    <div class="col-8 ">
+                        <!--<div class="w-75 h-75 bg-white center-block mt-5">One of three columns</div>-->
+                        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-indicators">
+                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp" class="d-block w-100 me-5 ms-5 " alt="error loading" style="height: 65vh">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>First slide label</h5>
+                                        <p>Some representative placeholder content for the first slide.</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp" class="d-block w-100 me-5 ms-5 " alt="error loading" style="height: 65vh">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>Second slide label</h5>
+                                        <p>Some representative placeholder content for the second slide.</p>
+                                    </div>
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(23).webp" class="d-block w-100 me-5 ms-5 " alt="error loading" style="height: 65vh">
+                                    <div class="carousel-caption d-none d-md-block">
+                                        <h5>Third slide label</h5>
+                                        <p>Some representative placeholder content for the third slide.</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+
+
                     </div>
                 </div>
             </div>
