--- a/web/index.html
+++ b/web/index.html
@@ -2448,7 +2448,7 @@
             <div class="container">
 
                 <div class="row w-100 h-25 text-center mt-2">
-                    <figure class="text-center mt-5 text-black">
+                    <figure class="text-center mt-3 text-black">
                         <blockquote class="blockquote" style="border: 1px solid transparent">
                             <p class="display-1" style="font-family: emoji">OUR RENTAL CARS</p>
                         </blockquote>
@@ -2458,9 +2458,9 @@
                     </figure>
                 </div>
 
-                <div class="row w-100 h-75 text-center ">
+                <div class="row w-100 h-75 text-center mt-0" style="position: relative; top: -50px;;right: 0;bottom: 0;left: 0;">
                     <div class="col-4  ">
-                        <div class="w-75 h-75 bg-white rounded-pill rounded-3 shadow-5-strong center-block mt-5">
+                        <div class="w-75 h-75 bg-white rounded-pill rounded-3 shadow-5-strong center-block mt-3">
                             <p class="text-cente" style="position: relative;top: 35%;bottom: 0;right: 0;left:0; margin: auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                                 Aliquam aperiam consequatur dignissimos doloremque dolorum ducimus enim et hic inventore libero nemo nobis possimus,
                                 provident quaerat repellat sequi sit unde veniam.</p>
@@ -2477,29 +2477,80 @@
                             </div>
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(15).webp" class="d-block w-100 me-5 ms-5 " alt="error loading" style="height: 65vh">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>First slide label</h5>
-                                        <p>Some representative placeholder content for the first slide.</p>
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-md w-75 bg-white me-5 ms-5">
+                                                <img src="assets/images/1200x-1.jpg" class="d-block w-100 img-thumbnail img-fluid shadow-2-strong center-block" alt="error loading" style="height: 45vh">
+                                                <div class=" d-none d-md-block">
+                                                    <h5 class="text-center text-primary mt-3 fa-2x">BMW</h5>
+                                                    <h5 class="text-center text-warning fa-3x">*******</h5>
+                                                    <h5 class="text-black text-center fw-bold fa-2x">$120/DAY</h5>
+                                                    <button type="button" class="btn btn-success mb-3">RENT NOW</button>
+                                                </div>
+                                            </div>
+                                            <div class="col-md w-75 bg-white me-5 ms-5">
+                                                <img src="assets/images/1200x-1.jpg" class="d-block w-100 center-block img-thumbnail img-fluid shadow-2-strong" alt="error loading" style="height: 45vh">
+                                                <div class=" d-none d-md-block">
+                                                    <h5 class="text-center text-primary mt-3 fa-2x">BMW</h5>
+                                                    <h5 class="text-center text-warning fa-3x">*******</h5>
+                                                    <h5 class="text-black text-center fw-bold fa-2x">$120/DAY</h5>
+                                                    <button type="button" class="btn btn-success mb-3">RENT NOW</button>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(22).webp" class="d-block w-100 me-5 ms-5 " alt="error loading" style="height: 65vh">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>Second slide label</h5>
-                                        <p>Some representative placeholder content for the second slide.</p>
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-md w-75 bg-white me-5 ms-5">
+                                                <img src="assets/images/1200x-1.jpg" class="d-block w-100 img-thumbnail img-fluid shadow-2-strong center-block" alt="error loading" style="height: 45vh">
+                                                <div class=" d-none d-md-block">
+                                                    <h5 class="text-center text-primary mt-3 fa-2x">BMW</h5>
+                                                    <h5 class="text-center text-warning fa-3x">*******</h5>
+                                                    <h5 class="text-black text-center fw-bold fa-2x">$120/DAY</h5>
+                                                    <button type="button" class="btn btn-success mb-3">RENT NOW</button>
+                                                </div>
+                                            </div>
+                                            <div class="col-md w-75 bg-white me-5 ms-5">
+                                                <img src="assets/images/1200x-1.jpg" class="d-block w-100 center-block img-thumbnail img-fluid shadow-2-strong" alt="error loading" style="height: 45vh">
+                                                <div class=" d-none d-md-block">
+                                                    <h5 class="text-center text-primary mt-3 fa-2x">BMW</h5>
+                                                    <h5 class="text-center text-warning fa-3x">*******</h5>
+                                                    <h5 class="text-black text-center fw-bold fa-2x">$120/DAY</h5>
+                                                    <button type="button" class="btn btn-success mb-3">RENT NOW</button>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="carousel-item">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/Slides/img%20(23).webp" class="d-block w-100 me-5 ms-5 " alt="error loading" style="height: 65vh">
-                                    <div class="carousel-caption d-none d-md-block">
-                                        <h5>Third slide label</h5>
-                                        <p>Some representative placeholder content for the third slide.</p>
+                                    <div class="container">
+                                        <div class="row">
+                                            <div class="col-md w-75 bg-white me-5 ms-5">
+                                                <img src="assets/images/1200x-1.jpg" class="d-block w-100 img-thumbnail img-fluid shadow-2-strong center-block" alt="error loading" style="height: 45vh">
+                                                <div class=" d-none d-md-block">
+                                                    <h5 class="text-center text-primary mt-3 fa-2x">BMW</h5>
+                                                    <h5 class="text-center text-warning fa-3x">*******</h5>
+                                                    <h5 class="text-black text-center fw-bold fa-2x">$120/DAY</h5>
+                                                    <button type="button" class="btn btn-success mb-3">RENT NOW</button>
+                                                </div>
+                                            </div>
+                                            <div class="col-md w-75 bg-white me-5 ms-5">
+                                                <img src="assets/images/1200x-1.jpg" class="d-block w-100 center-block img-thumbnail img-fluid shadow-2-strong" alt="error loading" style="height: 45vh">
+                                                <div class=" d-none d-md-block">
+                                                    <h5 class="text-center text-primary mt-3 fa-2x">BMW</h5>
+                                                    <h5 class="text-center text-warning fa-3x">*******</h5>
+                                                    <h5 class="text-black text-center fw-bold fa-2x">$120/DAY</h5>
+                                                    <button type="button" class="btn btn-success mb-3">RENT NOW</button>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="carousel-control-prev-icon text-dark" aria-hidden="true"></span>
                                 <span class="visually-hidden">Previous</span>
                             </button>
                             <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
@@ -2507,7 +2558,6 @@
                                 <span class="visually-hidden">Next</span>
                             </button>
                         </div>
-
 
                     </div>
                 </div>
