add cars images

--- a/web/index.html
+++ b/web/index.html
@@ -2620,20 +2620,53 @@
                 <blockquote class="blockquote" style="border: 1px solid transparent">
                     <p class="display-1" style="font-family: emoji">SELECT VEHICLE YOU LIKE</p>
                 </blockquote>
-                <figcaption class=" text-black mt-0" style="font-size: 20px">
-                    Choose any of our featured cars
+                <figcaption id="availableCars" class=" text-black mt-0" style="font-size: 20px ;display: inline">
+                    25
+                </figcaption>
+                <figcaption class=" text-black mt-0" style="font-size: 20px;display: inline">
+                    Cars Available
                 </figcaption>
             </figure>
         </div>
 
-        <div class="center-block border-2 border-dark" style="width: 80%;height: 75vh;position: relative;top:20%;">
+        <div class="center-block " style="width: 80%;height: 75vh;position: relative;top:20%;">
 
-           <div class="row">
-               <div class="col w-25 center-block bg-white mt-5" style="height: 40%;">
-
+           <div class="row h-100">
+               <div class="col center-block bg-white mt-5 me-3 ms-3 thumbnail shadow" style="height: 100%;">
+                   <div class="bg-info w-100" style="height: 10%;position: relative;">
+                       <p class="text-white text-center fa-2x">BMW</p>
+                   </div>
+                   <img src="assets/images/1200x-1.jpg" alt="" class="img-responsive img-thumbnail shadow w-100 h-25">
+                   <h5>available</h5>
+                   <h5>$250/DAY</h5>
+                   <h5>$500/MONTH</h5>
+                   <h5>brand</h5>
+                   <h5>type</h5>
+                   <h5>fuel type</h5>
+                   <h5>transmission type</h5>
+                   <h5>passengers</h5>
+                   <h5>free km for day</h5>
+                   <h5>free km for month</h5>
+                   <h5>extra km price</h5>
+                   <hr class="divider-horizontal-blurry" />
                </div>
-               <div class="col w-100 center-block bg-white mt-5" style="height: 40%;">
-
+               <div class="col center-block bg-white mt-5 me-3 ms-3 thumbnail shadow" style="height: 100%;">
+                   <div class="bg-info w-100" style="height: 10%;position: relative;">
+                       <p class="text-white text-center fa-2x">BMW</p>
+                   </div>
+                   <img src="assets/images/1200x-1.jpg" alt="" class="img-responsive img-thumbnail shadow w-100 h-25">
+               </div>
+               <div class="col center-block bg-white mt-5 me-3 ms-3 thumbnail shadow" style="height: 100%;">
+                   <div class="bg-info w-100" style="height: 10%;position: relative;">
+                       <p class="text-white text-center fa-2x">BMW</p>
+                   </div>
+                   <img src="assets/images/1200x-1.jpg" alt="" class="img-responsive img-thumbnail shadow w-100 h-25">
+               </div>
+               <div class="col center-block bg-white mt-5 me-3 ms-3 thumbnail shadow" style="height: 100%;">
+                   <div class="bg-info w-100" style="height: 10%;position: relative;">
+                       <p class="text-white text-center fa-2x">BMW</p>
+                   </div>
+                   <img src="assets/images/1200x-1.jpg" alt="" class="img-responsive img-thumbnail shadow w-100 h-25">
                </div>
            </div>
 
